add header swag doc
